--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,10 +1,11 @@
 /** @format */
 
 .nav {
-  position: sticky;
+  /* position: sticky; */
   display: flex;
   flex-direction: row;
-  padding: 1rem 1rem;
+  padding: 1rem 0.5rem;
+  background-color: red;
 }
 
 .navbar-items:first-child {
@@ -15,19 +16,32 @@
 }
 
 .navbar-items:nth-child(2) {
+  flex: 4;
   border: 2px solid whitesmoke;
   border-radius: 2rem;
   padding: 0.5rem 0 0 1rem;
-  flex: 6;
 }
 
 .navbar-items:last-child {
+  flex: 3;
   display: flex;
-  flex: 4;
   flex-direction: row;
   padding-top: 0.5rem;
 }
 
 .navbar-items-contents {
   margin: 0 1.5rem;
+}
+
+@media screen and (max-width: 720px) {
+  .nav {
+    display: flex;
+    flex-direction: row;
+    padding: 0.5rem 0.5rem;
+    background-color: red;
+  }
+
+  .navbar-items:last-child {
+    display: none;
+  }
 }
