--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: row;
   padding: 1rem 0.5rem;
-  background-color: red;
+  /* background-color: red; */
 }
 
 .navbar-items:first-child {
