--- a/src/css/Sidebar.css
+++ b/src/css/Sidebar.css
@@ -49,7 +49,7 @@
   display: none;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .sidebar-des {
     display: none;
   }
@@ -61,12 +61,13 @@
     /* background-color: yellowgreen; */
     /* top: 3rem; */
     height: 100%;
+    z-index: 10;
   }
 
   .sidebar-mob-item-content {
     display: flex;
     flex-direction: column;
-    background-color: yellowgreen;
+    background-color: white;
     width: 300px;
     height: 100%;
   }
