--- a/src/css/Trans.css
+++ b/src/css/Trans.css
@@ -25,15 +25,17 @@
   width: 80px;
 }
 
-/* .section-two {
+.section-two {
   display: flex;
-  flex-direction: row;
-  border: 2px soild yellow;
-} */
+  flex-flow: row wrap;
+  /* flex-direction: row; */
+  margin-top: 2rem;
+  justify-content: space-between;
+}
 
-.section-two:first-child {
-  flex: 6;
-  padding: 5rem 5rem;
+.section-two-items {
+  width: 600px;
+  margin-top: 1rem;
 }
 
 .payment-section {
@@ -47,32 +49,22 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-  margin-left: 4rem;
+  margin-left: 8rem;
   position: absolute;
   top: 0;
-  left: 35rem;
+  left: 45rem;
   /* padding: 0.5rem; */
 }
 
-.trans-container {
-  display: flex;
-  flex-direction: row;
-  background-color: green;
-}
-
-.container-home {
-  display: flex;
-  flex-direction: row;
-  background-color: rgb(201, 201, 196);
-}
-
-.trans-container-items {
-  padding: 1rem 0.3rem;
-  border-top: 1px solid whitesmoke;
-  border-bottom: 1px solid whitesmoke;
-}
-.origin-trans {
-  border: none;
+.input-payment-section {
+  margin-right: 5rem;
+  margin-left: 4rem;
+  width: 30%;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 1px solid gray;
+  background-color: whitesmoke;
 }
 
 table {
@@ -88,7 +80,7 @@ tr {
 }
 
 th {
-  background-color: rgb(211, 206, 206);
+  background-color: rgb(214, 213, 213);
   text-align: left;
 }
 
@@ -162,8 +154,106 @@ td:nth-child(6) {
   width: 100px;
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 1024px) {
   .container-trans {
-    padding: 0 0 0 2rem;
+    padding: 0 1rem;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  .container-trans {
+    padding: 0 0.5rem;
+  }
+
+  .section-one-transaction {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+  }
+
+  .item-toggle {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    margin-left: 1rem;
+    position: absolute;
+    top: 0;
+    left: 15rem;
+    /* padding: 0.5rem; */
+  }
+
+  .showing {
+    display: none;
+  }
+
+  table {
+    width: 100%;
+    border: none;
+    border-collapse: collapse;
+    background-color: white;
+    font-size: 0.5em;
+  }
+
+  tr {
+    width: 100%;
+    height: 60px;
+  }
+
+  th {
+    background-color: rgb(214, 213, 213);
+    text-align: left;
+  }
+
+  th:first-child {
+    width: 40%;
+    padding-left: 2rem;
+  }
+
+  th:nth-child(2) {
+    width: 15%;
+  }
+
+  th:nth-child(3) {
+    display: none;
+    /* width: 20%; */
+  }
+
+  th:nth-child(4) {
+    display: none;
+    /* width: 20%; */
+  }
+
+  td {
+    border-top: 1px solid whitesmoke;
+  }
+
+  td:nth-child(3) {
+    width: 20%;
+    display: none;
+  }
+  td:nth-child(4) {
+    display: none;
+    width: 20%;
+  }
+
+  td:nth-child(5) {
+    width: 20%;
+  }
+
+  td:nth-child(6) {
+    width: 5%;
+  }
+
+  .hidden-items {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .hello {
+    border: 1px solid gray;
+    color: green;
+    border-radius: 30px;
+    padding: 0.5rem 0.5rem;
+    width: 80px;
   }
 }
